--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="mod2_solution/style.css">
   <h1> Our Menu </h1>
