--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="mod2_solution/style.css">
+    <link rel="stylesheet" href="style.css">
   <h1> Our Menu </h1>
     
-    <table>
-      
+    <section class="border">
       <a>Sushi<a/>
+        <p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
+    </section>
