--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html><head>
 
-<title>Test Restaurant Menu/title>
+<title>Test Restaurant Menu</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
