--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -21,7 +21,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span> 
       </button>
-      <a class="navbar-brand" href="#">Food, LLC</a>
+      <a class="navbar-brand" href="#">Test Restaurant</a>
     </div>
 
     <div class="collapse in" id="myNavbar" aria-expanded="true" style="">
