--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -26,8 +26,8 @@
 
     <div class="collapse in" id="myNavbar" aria-expanded="true" style="">
       <ul class="nav navbar-nav visible-xs">
-        <li><a class="menu-item" href="#">Chicken</a></li>
-        <li><a class="menu-item" href="#">Beef</a></li> 
+        <li><a class="menu-item" href="#">Steak</a></li>
+        <li><a class="menu-item" href="#">Burger</a></li> 
         <li><a class="menu-item" href="#">Sushi</a></li> 
       </ul>
     </div>
